Inclusão imagem logo

--- a/petrec/Templates/petrec/anuncio.html
+++ b/petrec/Templates/petrec/anuncio.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
+{% load static %}
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <title>Home PetRec</title>
-  <link rel="stylesheet" type="text/css" href="./home.css">
 </head>
 
 
@@ -12,6 +12,7 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: sans-serif;
   }
 
   #navbar {
@@ -30,10 +31,10 @@
   }
 
   #navbar img {
-    width: 80px;
-    height: 80px;
+    width: 85px;
+    height: 85px;
     background: #a9b478;
-    border-radius: 45px;
+    border-radius: 29px;
   }
 
   #navbar h1 {
@@ -56,12 +57,6 @@
     cursor: pointer;
   }
 
-  #main form{
-    display: grid;
-    padding: 50px;
-    align-items: center;
-  }
-
 
 </style>
 
@@ -69,13 +64,13 @@
 <body>
 
 <nav id="navbar">
-  <a href="{%url 'Home'%}">
-    <img src="">
+  <a href="{%url 'home'%}">
+    <img src="{% static "pata_index.png" %}">
   </a>
 
   <h1>Pet <br> Rec</h1>
   <div>
-    <button class="btn" > Cadastro</button>
+    <button class="btn"> Cadastro</button>
     <br>
     <button class="btn"> Login</button>
     <br>
@@ -85,19 +80,15 @@
 </nav>
 
 <main id="main">
-  <form>
-    {% csrf_token %}
-    <input type="text" name="nome completo" placeholder="Nome Completo"><br>
-    <input type="text" name="cpf" placeholder="CPF" maxlength="11" ><br>
-    <input type="text" name="email" placeholder="E-mail"><br>
-    <input type="text" name="telefone" placeholder="Telefone" maxlength="11" ><br>
-    <input type="password" name="senha" placeholder="Senha"><br>
-    <input type="password" name="confirm senha" placeholder="Confirme a senha"><br>
+  <div>
+    <h4>
 
-  </form>
+    </h4>
+  </div>
+  <div>
+    <img src="">
 
-
-
+  </div>
 </main>
 
 </body>
