--- a/petrec/Templates/petrec/anuncio.html
+++ b/petrec/Templates/petrec/anuncio.html
@@ -13,11 +13,14 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: sans-serif;
+
+
   }
 
   #navbar {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    display: flex;
+    flex-direction: row;
+  / / grid-template-columns: 1 fr 1 fr 1 fr;
     align-items: center;
     padding: 10px;
     background-color: #b9b5a9;
@@ -27,6 +30,7 @@
   #main {
     display: grid;
     grid-template-rows: 3fr 2fr 1fr;
+
 
   }
 
@@ -40,6 +44,7 @@
   #navbar h1 {
     line-height: 1.7rem;
     font-size: 2rem;
+    margin-left: 15px;
   }
 
   .btn {
@@ -50,11 +55,20 @@
     padding: .2rem;
     margin-bottom: .2rem;
     width: 60px;
+    font-family: sans-serif;
+    margin-left: 90px;
+
   }
 
   .btn:hover {
     background-color: #2e3e99;
     cursor: pointer;
+  }
+
+  #main div {
+    margin-left: 20px;
+    margin-right: 20px;
+    margin-top: 25px;
   }
 
 
@@ -64,32 +78,20 @@
 <body>
 
 <nav id="navbar">
-  <a href="{%url 'home'%}">
-    <img src="{% static "pata_index.png" %}">
-  </a>
 
+  <img src="{% static "pata_index.png" %}">
   <h1>Pet <br> Rec</h1>
   <div>
-    <button class="btn"> Cadastro</button>
+    <button type="button" class="btn"> Cadastro</button>
     <br>
-    <button class="btn"> Login</button>
+
+    <button type="button" class="btn"> Login</button>
     <br>
-    <button class="btn"> Anunciar</button>
+    <button type="button" class="btn"> Anunciar</button>
   </div>
 
 </nav>
 
-<main id="main">
-  <div>
-    <h4>
-
-    </h4>
-  </div>
-  <div>
-    <img src="">
-
-  </div>
-</main>
 
 </body>
 </html>
