--- a/petrec/Templates/petrec/login.html
+++ b/petrec/Templates/petrec/login.html
@@ -28,8 +28,14 @@
   }
 
   #main {
-    display: grid;
-    grid-template-rows: 3fr 2fr 1fr;
+    display: flex;
+    flex-direction: column ;
+    margin-left: 30px;
+    margin-right: 200px;
+    margin-top: 50px;
+    border-radius: 17px;
+
+
 
 
   }
@@ -71,17 +77,6 @@
     margin-top: 25px;
   }
 
-  #box1 {
-    width: 300px;
-    height: 300px;
-    background-color: #a9b478;
-    opacity: 0.4;
-    border-radius: 17px;
-  }
-
-  #pesq {
-    margin-top: 90px;
-  }
 
 </style>
 
@@ -105,24 +100,10 @@
 
 
 <main id="main">
-  <div id="box1"/>
-  <div>
-    <p>
-      Parte onde conta uma história e
-      o funcionamento<br>
-      do site. Seu pet querido está perdido ou encontrou<br>
-      algum na rua? <br>
-      Anuncie aqui para que possa encontrá-lo
-    </p>
-  </div>
-  <div id="pesq">
-    <input type="text" placeholder="Pesquisar">
-    <button type="submit"></button>
-
-  </div>
-
+  <input type="text" placeholder="Email" >
+  <input type="password" placeholder="Senha">
+  <button type="submit">Entrar</button>
 </main>
-
 
 </body>
 </html>
