--- a/petrec/Templates/petrec/cadastro.html
+++ b/petrec/Templates/petrec/cadastro.html
@@ -91,6 +91,15 @@
   </div>
 
 </nav>
+<main id="main">
+  <input type="text" placeholder="Nome Completo" >
+  <input type="text" placeholder="CPF" >
+  <input type="text" placeholder="Telefone" >
+  <input type="text" placeholder="Email" >
+  <input type="password" placeholder="Senha" >
+  <input type="password" placeholder="Confirma Senha">
+  <button type="submit">Entrar</button>
+</main>
 
 
 </body>
