--- a/petrec/Templates/petrec/home.html
+++ b/petrec/Templates/petrec/home.html
@@ -93,12 +93,12 @@
   <img src="{% static "pata_index.png" %}">
   <h1>Pet <br> Rec</h1>
   <div>
-    <button type="button" class="btn"> Cadastro</button>
+    <button type="button" class="btn"><a href="{% url 'cadastro' %}">Cadastro</a></button>
     <br>
 
-    <button type="button" class="btn"> Login</button>
+    <button type="button" class="btn"><a href="{% url 'login' %}">Login</a></button>
     <br>
-    <button type="button" class="btn"> Anunciar</button>
+    <button type="button" class="btn"><a href="{% url 'anuncio' %}">Anunciar</a></button>
   </div>
 
 </nav>
