--- a/petrec/templates/petrec/login.html
+++ b/petrec/templates/petrec/login.html
@@ -77,6 +77,12 @@
     margin-top: 25px;
   }
 
+  .input{
+    margin-bottom: 1rem;
+    padding: .5rem;
+    border-radius: 10px;
+  }
+
 
 </style>
 
@@ -84,25 +90,24 @@
 <body>
 
 <nav id="navbar">
+  <a href="{% url 'home' %}">
+    <img src="{% static "pata_index.png" %}">
+  </a>
 
-  <img src="{% static "pata_index.png" %}">
   <h1>Pet <br> Rec</h1>
   <div>
-    <button type="button" class="btn"> Cadastro</button>
+    <button type="button" class="btn"><a href="{% url 'cadastro' %}">Cadastro</a></button>
     <br>
-
-    <button type="button" class="btn"> Login</button>
-    <br>
-    <button type="button" class="btn"> Anunciar</button>
+    <button type="button" class="btn">Anunciar</button>
   </div>
 
 </nav>
 
 
 <main id="main">
-  <input type="text" placeholder="Email" >
-  <input type="password" placeholder="Senha">
-  <button type="submit">Entrar</button>
+  <input type="text" class="input" placeholder="Email" >
+  <input type="password" class="input" placeholder="Senha">
+  <button type="submit" class="input">Entrar</button>
 </main>
 
 </body>
