--- a/petrec/templates/petrec/cadastro.html
+++ b/petrec/templates/petrec/cadastro.html
@@ -96,7 +96,7 @@
 
   <h1>Pet <br> Rec</h1>
   <div>
-    <button type="button" class="btn"><a href="{% url 'cadastro' %}">Cadastro</a></button>
+    <button type="button" class="btn"><a href="{% url 'login' %}">Login</a></button>
     <br>
     <button type="button" class="btn">Anunciar</button>
   </div>
