alterando estetica dos botões

--- a/petrec/templates/petrec/cadastro.html
+++ b/petrec/templates/petrec/cadastro.html
@@ -83,6 +83,14 @@
     border-radius: 10px;
   }
 
+  .but{
+    color: #ffffff;
+    background-color: #3f51b5;
+    margin-bottom: 1rem;
+    padding: .5rem;
+    border-radius: 10px;
+  }
+
 
 </style>
 
@@ -111,7 +119,7 @@
   <input type="text" class="input" placeholder="Email">
   <input type="password" class="input" placeholder="Senha">
   <input type="password" class="input" placeholder="Confirmar senha">
-  <button type="submit" class="input">Entrar</button>
+  <button type="submit" class="but">Entrar</button>
 </main>
 
 </body>
