Ajustando posição do formulario de cadastro

--- a/petrec/templates/petrec/cadastro.html
+++ b/petrec/templates/petrec/cadastro.html
@@ -114,12 +114,12 @@
   <form method="POST">
     {% csrf_token %}
 
-    <input type="text" class="input" placeholder="Nome Completo">
-    <input type="text" class="input" placeholder="CPF">
-    <input type="text" class="input" placeholder="Telefone">
-    <input type="text" class="input" placeholder="Email">
-    <input type="password" class="input" placeholder="Senha">
-    <input type="password" class="input" placeholder="Confirmar senha">
+    <input type="text" class="input" placeholder="Nome Completo"><br>
+    <input type="text" class="input" placeholder="CPF"><br>
+    <input type="text" class="input" placeholder="Telefone"><br>
+    <input type="text" class="input" placeholder="Email"><br>
+    <input type="password" class="input" placeholder="Senha"><br>
+    <input type="password" class="input" placeholder="Confirmar senha"><br>
     <button type="submit" class="but">Entrar</button>
 
   </form>
