--- a/petrec/templates/petrec/home.html
+++ b/petrec/templates/petrec/home.html
@@ -136,7 +136,7 @@
   </div>
   <input type="text" class="inp" placeholder="Pesquisar">
 
-  <button type="Buton" class="but"><img class="lupa" src="{% static 'lupa.png' %}"/>
+  <button type="submit" class="but"><img class="lupa" src="{% static 'lupa.png' %}"/>
 
 
 
