--- a/petrec/templates/petrec/login.html
+++ b/petrec/templates/petrec/login.html
@@ -106,7 +106,7 @@
   <div>
     <button type="button" class="btn"><a href="{% url 'cadastro' %}">Cadastro</a></button>
     <br>
-    <button type="button" class="btn">Anunciar</button>
+    <button type="button" class="btn"><a href="{% url 'anunciar' %}">Anunciar</a></button>
   </div>
 
 </nav>
