--- a/petrec/templates/petrec/cadastro.html
+++ b/petrec/templates/petrec/cadastro.html
@@ -104,7 +104,7 @@
   <div>
     <button type="button" class="btn"><a href="{% url 'login' %}">Login</a></button>
     <br>
-    <button type="button" class="btn">Anunciar</button>
+    <button type="button" class="btn"><a href="{% url 'anunciar' %}">Anunciar</a></button>
   </div>
 
 </nav>
