reteando a pagina de listar dogs após clicar em cadastrar

--- a/petrec/templates/petrec/cadastro_dog.html
+++ b/petrec/templates/petrec/cadastro_dog.html
@@ -125,7 +125,7 @@
     </select><br>
     <input type="text" name="recompensa" class="input" placeholder="Recompensa caso ofereça"><br>
     <input type="file" name="foto"><br>
-    <button type="submit" class="but">Enviar</button>
+    <button type="submit" class="but"><a href="{% url 'anuncio' %}">Cadastrar</a></button>
 
   </form>
 
