tentando arrumar o erro que aparece quando dou deploy no heroku

--- a/petrec/templates/petrec/anuncio.html
+++ b/petrec/templates/petrec/anuncio.html
@@ -105,7 +105,7 @@
   <div class="row">
     {% for p in pet %}
       <div class="col-sm-3">
-        <a href="../detalhe/{{ p.id }}">
+        <a href="petrec/detalhe/{{ p.id }}">
           <div class="polaroid">
             <img src="" alt="" style="width:80%">
             <div class="container">
